--- a/data/config.json
+++ b/data/config.json
@@ -1,1 +1,1 @@
-{"maxlen": 2262}
+{"adddelta_delta": 0.1,"linear2_lambda":0.99,"linear3_3order":0.45,"linear3_2order":0.45,"1sum": 355584657, "2sum": 310128093, "3sum": 236635246}
